icera: load supported modes with AT%IPSYS=?

http://bugzilla.gnome.org/show_bug.cgi?id=703023